# treestats-bot

./: Cargo.toml  Dockerfile  README.md  bot.db  build.rs
.github/workflows/: deploy.yml
src/: bot.rs  db.rs  discord.rs  main.rs  web.rs
src/migrations/: 20251128_initial.sql
