[package]
name = "bot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
axum = "0.8"
chrono = "0.4"
env_logger = "0.11.8"
http = "1"
log = "0.4.28"
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serenity = { version = "0.12", features = ["client", "gateway", "http", "utils"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
strsim = "0.11"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
